TDOT_App/k8s/gitlab-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb-pool
spec:
    # just for development - not ready for clustering ATM
    replicas: 1
    selector:
        matchLabels:
            app: mongodb-worker
    template:
        metadata:
            labels:
                app: mongodb-worker
        spec:
            containers:
                - name: mongo
                  image: mongo:7
                  resources:
                      limits:
                          memory: "256Mi"
                          cpu: "200m"
                  ports:
                      - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
    name: mongo-service
spec:
    selector:
        app: mongodb-worker
    ports:
        - port: 27017
          targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-worker-pool
spec:
    replicas: 2
    selector:
        matchLabels:
            app: backend-worker
    template:
        metadata:
            labels:
                app: backend-worker
        spec:
            containers:
                - name: backend
                  # image: htldevzone.azurecr.io/5bhif/team-a/guide-app/backend:latest
                  image: <APP_IMAGE_NAME>
                  imagePullPolicy: Always
                  resources:
                      limits:
                          memory: "128Mi"
                          cpu: "50m"
                  ports:
                      - containerPort: 8080
                  startupProbe:
                      httpGet:
                          path: /health
                          port: 8080
                      failureThreshold: 30
                      periodSeconds: 5
                  livenessProbe:
                      httpGet:
                          path: /live
                          port: 8080
                      periodSeconds: 2
                  readinessProbe:
                      httpGet:
                          path: /health
                          port: 8080
                      initialDelaySeconds: 10
                      periodSeconds: 5
                      failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
    name: backend-service
spec:
    type: ClusterIP
    selector:
        app: backend-worker
    ports:
        - port: 80
          targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: app-ingress
spec:
    rules:
        # for local deployments use
        # - host: app-a00.k8s-local.htl-dev.zone
        # for cloud deployments use
        - host: <DEPLOYMENT_URL>
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 80
    ingressClassName: nginx
